--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "grunt-contrib-connect": "^0.11.2",
         "grunt-contrib-copy": "~0.7.0",
         "grunt-contrib-htmlmin": "^2.2.0",
-        "grunt-contrib-sass": "^1.0.0",
+        "grunt-sass": "^2.0.0",
         "grunt-contrib-uglify": "^0.6.0",
         "grunt-contrib-watch": "^0.6.1",
         "grunt-nginclude": "^1.0.1",
