se migra de bower a npm

--- a/package.json
+++ b/package.json
@@ -1,26 +1,47 @@
 {
-    "name": "ksass",
-    "version": "v1.0.3",
-    "author": "Maximiliano Báez González <maximiliano.baez@konecta.com.py>",
-    "description": "Template SASS/CSS para aplicaciones de konecta",
-    "private": true,
-    "devDependencies": {
-        "bower": "*",
-        "connect-modrewrite": "^0.9.0",
-        "grunt": "~0.4.*",
-        "grunt-banner": "^0.6.0",
-        "grunt-connect-proxy": "^0.2.0",
-        "grunt-contrib-concat": "~0.5.0",
-        "grunt-contrib-connect": "^0.11.2",
-        "grunt-contrib-copy": "~0.7.0",
-        "grunt-contrib-htmlmin": "^2.2.0",
-        "grunt-sass": "^2.0.0",
-        "grunt-contrib-uglify": "^0.6.0",
-        "grunt-contrib-watch": "^0.6.1",
-        "grunt-nginclude": "^1.0.1",
-        "grunt-open": "^0.2.3",
-        "grunt-remove": "~0.1.0",
-        "grunt-string-replace": "~1.2.0",
-        "matchdep": "*"
-    }
+  "name": "ksass",
+  "version": "v1.0.4",
+  "author": "Maximiliano Báez González <maxibaezpy@gmail.com>",
+  "description": "Template SASS/CSS para aplicaciones angularjs del SNC",
+  "private": true,
+  "dependencies": {
+    "jquery": "^3.2.1",
+    "angular": "^1.6.4",
+    "angular-route": "^1.6.4",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "bootstrap-sass": "3.3.7",
+    "bootstrap-toggle": "~2.2.0",
+    "ng-tasty": "^0.6.1",
+    "highcharts": "^5.0.3"
+  },
+  "devDependencies": {
+    "bower": "*",
+    "connect-modrewrite": "^0.10.2",
+    "grunt": "~0.4.*",
+    "grunt-banner": "^0.6.0",
+    "grunt-connect-proxy": "^0.2.0",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-copy": "~0.7.0",
+    "grunt-contrib-htmlmin": "^2.2.0",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-nginclude": "^1.0.1",
+    "grunt-open": "^0.2.3",
+    "grunt-remove": "~0.1.0",
+    "grunt-sass": "^2.0.0",
+    "grunt-string-replace": "~1.2.0",
+    "matchdep": "*"
+  },
+  "prettier": {
+    "arrowParens": "avoid",
+    "bracketSpacing": true,
+    "jsxBracketSameLine": false,
+    "printWidth": 120,
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none",
+    "useTabs": false
+  }
 }
